[tool.poetry]
name = "users-store"
version = "0.1.3"
description = ""
authors = ["kozlovmv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.0"
users-core = {git = "https://github.com/kozlovmvl/users-core.git"}
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.ruff]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
